--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<form action="https://jimbows.us18.list-manage.com/subscribe/post?u=591f544a891e6291c340f01d3&amp;id=8ca3f30595" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		    <div id="mc_embed_signup_scroll">
 			 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_591f544a891e6291c340f01d3_8ca3f30595" tabindex="-1" value=""></div>
+		    <div style="position: absolute; center: -5000px;" aria-hidden="true"><input type="text" name="b_591f544a891e6291c340f01d3_8ca3f30595" tabindex="-1" value=""></div>
 		    <div class="button"><input class="btn btn-primary" type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 		    </div>
 		</form>
